Implémentation des méthodes pour la table intermédiaire
