# api-flight/spring-server/src/main/java/io/avalia/flights/entities/PassengerHasFlightEntity.java
@@ -1,0 +1,45 @@
+package io.avalia.flights.entities;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import java.io.Serializable;
+
+@Entity
+@Table(name = "Passenger_has_flight")
+public class PassengerHasFlightEntity implements Serializable {
+    @Id
+    @Column(name = "id")
+    private long id;
+
+    @Column(name = "Passenger_id")
+    private long passengerId;
+
+    @Column(name = "Flight_id")
+    private long flightId;
+
+    public long getId() {
+        return id;
+    }
+
+    public long getFlightId() {
+        return flightId;
+    }
+
+    public long getPassengerId() {
+        return passengerId;
+    }
+
+    public void setId(long id) {
+        this.id = id;
+    }
+
+    public void setFlightId(long flightId) {
+        this.flightId = flightId;
+    }
+
+    public void setPassengerId(long passengerId) {
+        this.passengerId = passengerId;
+    }
+}
