# api-flight/spring-server/src/main/resources/api-spec.yaml
@@ -174,6 +174,44 @@ paths:
           description: created
           schema:
             type: object
+  /passengerHasFlight/create:
+    post:
+      description: Bind a passenger to a flight
+      operationId: setPassengerHasFlight
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: PassengerHasFlight
+          required: true
+          schema:
+            $ref: '#/definitions/PassengerHasFlight'
+      responses:
+        '201':
+          description: Passenger bind to flight
+          schema:
+            type: object
+  /passengerHasFlight/{id}:
+    delete:
+      description: Delete passenger has flight by Id
+      operationId: deletePassengerHasFlightById
+      parameters:
+        - in: path
+          name: id
+          description: PassengerHasFlight id
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: success
+          schema:
+            type: object
+            items:
+              $ref: '#/definitions/PassengerHasFlight'
+        404:
+          description: flight not found
 definitions:
   Passenger:
     type: object
@@ -195,3 +233,12 @@ definitions:
         type: string
       time:
         type: string
+  PassengerHasFlight:
+    type: object
+    properties:
+      id:
+        type: integer
+      passenger:
+        type: integer
+      flight:
+        type: integer
